# AoC

./: AoC.cabal  day11.hs  day12.hs  day5Test.txt  day7.hs  stack.yaml
2017/day1/: day1.go
2017/day3/: day3.go
2017/day4/: day4.go
2020/: boilerplate.go
2020/day1/: .day1.go.swp
2020/day2/: day2.go
2020/day3/: day3.go
day1/: day1  day1.go
day10/: day10.go
day11/: day11.go
day12/: day12.go  day12.hs
day13/: day13.go  test
day14/: day14.go
day15/: day15.go
day16/: day16.go
day2/: day2.go
day4/: Main.hs  day4.go
day5/: Main.hs  day5.go
day6/: Main.hs  day6.go
day7/: day7.go
day8/: day8.go
day9/: day9.go
